2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/ImageInfo.cs, libstetic/editor/ThemedIcon.cs,
	  libstetic/editor/SelectImageDialog.cs,
	  libstetic/editor/StockIconSelectorItem.cs,
	  libstetic/editor/StockIconList.cs, libstetic/editor/StockItem.cs,
	  libstetic/editor/SelectIconDialog.cs,
	  libstetic/GeneratorContext.cs, libstetic/WidgetUtils.cs: Fixed
	  loading of theme and gtk stock icons.

2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetPropertyTreeBackend.cs: Added missing null check.

2007-07-27  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: Added null check.
	* libsteticui/PluggableWidget.cs: When updating the child widget, do
	  not add it to the notebook if it is already a child of the
	  notebook.
	* libstetic/wrapper/pixmaps/comboentry.png,
	  libstetic/wrapper/pixmaps/iconview.png, libstetic/libstetic.mdp,
	  libstetic/Makefile.am: Added some missing icons.
	* libstetic/wrapper/Widget.cs, libstetic/wrapper/objects.xml: Fixed
	  some issues with HasDefault. It can only be assigned when the
	  widget already has a parent.
	* libstetic/TypedClassDescriptor.cs: Report icon loading errors.

2007-07-20  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Make DeleteSelection work for
	  placeholders.
	* libsteticui/WidgetEditSession.cs, libsteticui/Component.cs,
	  libsteticui/WidgetDesigner.cs, libsteticui/WidgetComponent.cs:
	  Moved all clipboard checking properties to WidgetDesigner.

2007-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Project.cs: Fixes on ActionGroup management.

2007-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupToolbar.cs: Notify group changes to the
	  frontend.
	* libsteticui/ActionGroupEditSession.cs: Don't delay the creation of
	  the designer because when used in combination with the widget
	  designer, change events are subscribed since the begining
